# py_bazel_mcp

./: .gitignore  LICENSE  PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  SECURITY.md  generate_mcp_config.sh  pyproject.toml  setup.sh
.github/workflows/: workflow.yml
example_mcp_configs/: cursor-mcp-config.json  warp-mcp-config.json
src/bazel_mcp/: __init__.py  bazel.py  server.py  targets.py  util.py  validation.py
tests/: __init__.py  test_util.py  test_validation.py
